<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductsFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/hello_products_list"
        app:layout_constraintBottom_toTopOf="@+id/button_product_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_product_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_2"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_product_1"
        app:layout_constraintEnd_toStartOf="@+id/button_product_3"
        app:layout_constraintStart_toEndOf="@+id/button_product_1" />

    <Button
        android:id="@+id/button_product_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/product_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_product_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <Button
        android:id="@+id/button_product_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/product_3"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_product_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_product_2" />

    <Button
        android:id="@+id/main_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="Main Page"
        app:layout_constraintStart_toStartOf="@+id/button_product_2"
        app:layout_constraintTop_toBottomOf="@+id/button_product_2" />

</androidx.constraintlayout.widget.ConstraintLayout>